--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@ html, body {
     padding: 0;
   }
   canvas{
-    margin-left: 25%;
-    margin-right: 25%;
-    margin-top: 100px;
-    border: 2px solid black;
+    margin-left: 2px;
+    margin-right: 2px ;
+    margin-top: 10px;
+    border: 2px solid rgb(0, 0, 0);
   }
   
   
